2002-10-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (do-subst-config-vals): Don't substitute
	OCTAVE_CONF_OCTAVE_LITE.
	(OCTAVE_LITE): Delete.

	* Makeconf.in: Use HAVE_DLOPEN_API, HAVE_LOADLIBRARY_API, and
	HAVE_SHL_LOAD_API instead of WITH_DL and WITH_SHL.

	* configure.in: Rewrite the way we handle dynamic linking.
	If dynamic linking is used always do what was previously only
	enabled by --enable-lite-kernel.

2002-10-17  Paul Kienzle <pkienzle@users.sf.net>

	* configure.in: Define WITH_DYNAMIC_LINKING based on --enable-shared.
	Add -lwsock32 to LIBS for MinGW.

2002-10-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (OCTAVE_LANG_PROG_NO_CONFDEFS): New macro.
	(OCTAVE_CXX_PRAGMA_INTERFACE_IMPLEMENTATION): Use it along with
	AC_LINK_IFELSE instead of AC_TRY_LINK.
	Require both programs to compile for success.

2002-10-16  Paul Kienzle <pkienzle@users.sf.net>

	* aclocal.m4: Both Cygwin and MinGW don't prepend underscores.
	* configure.in: MinGW builds shared libraries the same as Cygwin.
	MinGW must link to winsock explicitly.
	* install-octave.in: MinGW and Cygwin both need OCTAVE_HOME.

2002-10-15  Paul Kienzle <pkienzle@users.sf.net>

	* configure.in (library_path_var): New variable.

2002-10-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (SH_LDFLAGS): Additional options for Cygwin:
	-Wl,--export-all-symbols -Wl,--enable-auto-import.

	* Makeconf.in (TERMLIBS): Substitute here.

	* configure.in: Define OCTAVE_USE_WINDOWS_API if 
	defined (__WIN32__) && ! defined (__CYGWIN__), not if
	defined (__WIN32__) || ! defined (__CYGWIN__).
	Also call AC_SUBST for TERMLIBS.

2002-10-14  Paul Kienzle <pkienzle@users.sf.net>

	* configure.in: Use correct SHLEXT and PICFLAG for Cygwin.
	* configure.in: Cygwin must link against -loctave.dll, etc.

	* configure.in: Define INCLUDE_LINK_DEPS because Cygwin needs DLLs
	to be linked against their dependencies.
	* Makeconf.in: Ditto.
