@@ -249,7 +249,7 @@ parameters for @code{quad}.\n\
 	  if (indefinite)
 	    {
 	      IndefQuad iq (quad_user_function, bound, indef_type);
-	      iq.copy (quad_opts);
+	      iq.set_options (quad_opts);
 	      val = iq.integrate (ier, nfun, abserr);
 	    }
 	  else
@@ -257,13 +257,13 @@ parameters for @code{quad}.\n\
 	      if (have_sing)
 		{
 		  DefQuad dq (quad_user_function, a, b, sing);
-		  dq.copy (quad_opts);
+		  dq.set_options (quad_opts);
 		  val = dq.integrate (ier, nfun, abserr);
 		}
 	      else
 		{
 		  DefQuad dq (quad_user_function, a, b);
-		  dq.copy (quad_opts);
+		  dq.set_options (quad_opts);
 		  val = dq.integrate (ier, nfun, abserr);
 		}
 	    }
