@@ -1,3 +1,8 @@
+2002-10-23  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* mk-opts.pl (emit_opt_class_header): Make set_options another
+	name for copy.
+
 2002-10-17  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* Makeconf.in (do-subst-config-vals): Don't substitute
